--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ li {
     z-index: 1;
     opacity: 0.9;
     background-color: black;
-    top: 20px;
+    top: 0%;
     left: 0%;
     transition: 1s ease;
     padding-top:2% ;
