--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ li {
     color: aliceblue;
     overflow-x: hidden;
     z-index: 1;
-    opacity: 0.9;
+    opacity: 1;
     background-color: black;
     top: 0%;
     left: 0%;
@@ -246,6 +246,7 @@ li {
     top: 0;
     right: 1%;
     color: #fff;
+    font-size:24px;
 }
 .beer {
     max-width: 400px;
