--- a/style.css
+++ b/style.css
@@ -214,7 +214,7 @@ li {
     background-color: aqua;
 }
 #slide {
-
+    Padding:20px;
     height: 75%;
     width: 0%;
     position: absolute;
@@ -226,7 +226,6 @@ li {
     top: 0%;
     left: 0%;
     transition: 1s ease;
-    padding-top:2% ;
    display: none;
     
 }
