--- a/style.css
+++ b/style.css
@@ -234,6 +234,7 @@ li {
     text-decoration: none;
     color: #fff;
     margin-bottom: 10px;
+    margin-left:20px;
 }
 .stroke {
     position: absolute;
