--- a/style.css
+++ b/style.css
@@ -235,8 +235,7 @@ li {
     display: block;
     text-decoration: none;
     color: #000;
-    margin-bottom: 10px;
-    margin:0 20px;
+    margin: 20px;
 }
 .stroke {
     position: absolute;
