--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     Padding: 0;
-    box-sizing:border-box;
+    box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
     
@@ -10,7 +10,6 @@ body {
     background:linear-gradient(to top, skyblue, rgb(247, 239, 239));
     background-position: center;
     background-repeat: no-repeat;
-    margin: 10PX;
     display: block;
 }
 .band-name {
@@ -245,8 +244,8 @@ li {
 #bun {
     position: absolute;
     top: 0;
-    right: 1%;
-    color: #fff;
+    right: 0%;
+    color: #000;
     font-size:24px;
 }
 .beer {
