--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    Padding: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
@@ -12,6 +12,7 @@ body {
     background-repeat: no-repeat;
     display: block;
     margin: 0;
+    overflow: hidden;
 }
 .band-name {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
