--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 * {
-    margin: 0;
-    padding: 0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 16px;
@@ -11,8 +11,8 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     display: block;
-    margin: 0;
-    overflow-x: hidden;
+    margin: 0px;
+    
 }
 .band-name {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
