--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     background-repeat: no-repeat;
     display: block;
     margin: 0px;
-    
+    padding: 10px;
 }
 .band-name {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -21,8 +21,8 @@ body {
     justify-self: start;
 }
 img {
-    width: 200px;
-    height: 200px;
+    width: 300px;
+    height: auto;
 }
 .main-header {
     background-color: rgb(9, 73, 212);
@@ -297,19 +297,19 @@ li {
         display: block;
     }
     .add img{
-        width: 98%;
-        margin-left: 1%;
+        width: 100%;
+       
     } 
     .headlines .add {
-        margin: 0%;
         width: 100%;
     }
     img{
         width: 100%;
+        height:auto;
         }
     
     .headlines a div{
-        margin-left: 0%;
+        margin: 0%;
         width: 100%;  
     }
 }
@@ -323,11 +323,11 @@ li {
     }
     .headlines a div img{
         width:100%;
-        margin-left: 0px;
+        
     }
     .theft {
         width: 100%;
-        margin-left: 1px;
+        
     }
     .main-footer{
         display: flex;
@@ -360,10 +360,9 @@ li {
     .para img{
         width: 100%;
         height: auto;
-        margin-left: 0px;
     }
     .headlines a div img{
-        width: 300px;
+        width: 100%;
         height: auto;
         margin-left: 0px;
     }
