--- a/style.css
+++ b/style.css
@@ -324,7 +324,8 @@ li {
     }
     .headlines a div img{
         width:100%;
-        
+        height:auto;
+        margin:10px 0px;
     }
     .theft {
         width: 100%;
@@ -371,7 +372,7 @@ li {
     .headlines a div img{
         width: 100%;
         height: auto;
-        margin-left: 0px;
+        margin:10px 0px;
     }
     .stroke {
         right: 10%;
