--- a/style.css
+++ b/style.css
@@ -246,8 +246,8 @@ li {
 }
 #bun {
     position: absolute;
-    top: 0;
-    right: 1%;
+    top: -3px;
+    right: -2%;
     color: #000;
     font-size:24px;
     font-weight: 700;
