--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     
 }
 body {
-    background-color:#ddd
+    background-color:#ddd;
     background-position: center;
     background-repeat: no-repeat;
     display: block;
