--- a/style.css
+++ b/style.css
@@ -253,7 +253,7 @@ li {
     font-size:30px;
     font-weight: 1000;
     z-index:1;
-}#bun:active {
+}#bun:active,#bun:focus{
    background-color:#bbb;
    width: 40px;
    border-radius:50%;
