--- a/style.css
+++ b/style.css
@@ -30,10 +30,14 @@ img {
     justify-content: space-between;
     color: #fff;
     height: 150px;
-    margin: 10px;
-    padding-right: 40px;
+    margin:0 0 10px;
     padding: 10px 40px 10px 10px;
     align-items: start;
+    position:fixed;
+    left:0;
+    right:0;
+    top:0;
+    z-index:100;
 }
 .main-nav {
     align-self: end;
