--- a/style.css
+++ b/style.css
@@ -358,7 +358,8 @@ li {
     .main-footer h4{
         font-size: 10px;
         color:#000;
-    } 
+    }
+    .main-footer h2{margin:0;}
     .navli {
         padding: 5px;
         width: 100%;
