--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ img {
     left:0;
     right:0;
     top:0;
-    z-index:10;
+    z-index:10;border-radius:0 0 15px 15px;
 }
 .main-nav {
     align-self: end;
