--- a/style.css
+++ b/style.css
@@ -220,6 +220,7 @@ li {
 #slide {
     
     height: 400px;
+    padding : 10px;
     width: 0%;
     position: absolute;
     color: aliceblue;
@@ -251,8 +252,9 @@ li {
 #bun {
     position: absolute;
     margin:0;
+    padding:5px;
     top: 1px;
-    right: 1px;
+    right: 2px;
     color: #000;
     font-size:30px;
     font-weight: 1000;
@@ -303,7 +305,7 @@ li {
         display: block;
     }
     .band-name {
-      
+        white-space: nowrap;
         font-size: 28px;
     }
     .title {
@@ -357,8 +359,9 @@ li {
     }
     .main-footer brand-name{margin:0;padding:0;}
     .navli {
-        padding: 5px;
+        padding: 0;
         width: 100%;
+        margin:0;
         justify-content: space-around;
     }
     
