--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ li {
     padding: 90px 0 0 0;
     }
     .main-head{
-        height: fit-content;
+        height:70px;
     }
     .main-nav a{
         display: none;
