--- a/style.css
+++ b/style.css
@@ -27,10 +27,8 @@ img {
     display: flex;
     justify-content: space-between;
     color: #fff;
-    height: 150px;
-    margin:0 0 10px;
     padding:10px;
-    align-items: start;
+    align-items: center;
     position:fixed;
     left:0;
     right:0;
@@ -38,12 +36,8 @@ img {
     z-index:10;
     /*border-radius:0 0 15px 15px;*/
 }
-.main-nav {
-    align-self: end;
-}
 .link-nav a{
     color: white;
-    margin-left: 20px;
     text-decoration: none;
 }
 .link-nav {
@@ -53,7 +47,6 @@ img {
 a {
     text-decoration: none;
     color: black;
-    transition:.5s;
 }
 .headlines a:active {
     color: red;
