--- a/style.css
+++ b/style.css
@@ -11,13 +11,11 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     display: block;
-    padding: 160px 10px 10px;
+    padding:60px 10px 10px;
 }
 .band-name {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bolder;
     font-size: 40px;
-    justify-self: start;
 }
 img {
     width: 300px;
@@ -38,10 +36,10 @@ img {
 }
 .link-nav a{
     color: white;
+    margin-right:15px;
     text-decoration: none;
 }
 .link-nav {
-    width: 500px;
     display: flex;
 }
 a {
