--- a/style.css
+++ b/style.css
@@ -370,7 +370,9 @@ li {
     
 }
 @media screen and (max-width: 500px) {
-
+     .band-name {
+        font-size: 18px;
+    }
     .para img{
         width: 100%;
         height: auto;
