--- a/style.css
+++ b/style.css
@@ -126,7 +126,7 @@ hr {
     width: 230px;
 }
 .theft {
-    width: 50%;
+    height:300px;
     margin: 10px;
     margin-bottom: 0px;
     /*object-fit: cover;
