--- a/style.css
+++ b/style.css
@@ -309,6 +309,9 @@ li {
     .title {
         display: block;
     }
+    .add{
+       flex-direction:column; 
+    } 
     .add img{
         width: 100%;
         height:fit-content;
